--- a/coding/spec.html
+++ b/coding/spec.html
@@ -160,17 +160,275 @@ public:
 
 <h3>Your second task</h3>
 
+<h4>Application</h4>
+
 <p>
   Now that we have a simple way of storing data in a general sense,
-  let's write some applications that share such data. 
+  let's write some applications that share such data, that can read
+  from and write to this line. Before we get into the specifics, your
+  <code>Application</code> class must support the following
+  functionality:
 </p>
 
+<pre>
+template< /*stuff here*/ >
+class Application : /*stuff here*/
+{
+public:
+    // every application has a 3-character address
+    // and knows about the DataStore that is shared
+    // between all Applications
+  Application(string addr, DataStore& ds);
+
+    // when an Application wants others to be able to
+    // discover it, it sends out a heartbeat, writing
+    // its address to the DataStore. Returns the message
+    // ("HTBT"+m_addres) that was written.
+  string heartbeat() const;
+
+    // Applications can connect to other Applications,
+    // discoverable via their address on the DataStore.
+    // An Application can only connect with others that
+    // are currently on the DataStore, so any that no
+    // longer have a heartbeat should be removed. 
+    // Returns the number of connections that were added.
+  int connect();
+
+    // when data is produced, the Application records
+    // it, storing it to its local memory. Returns true
+    // as long as the data was succefully stored, else
+    // false.
+  bool record(DataType data);
+
+    // Applications can broadcast all data that they've
+    // recorded on the DataStore's line for other Applications
+    // to read. Returns the number of data points written.
+  int broadcast() const;
+
+    // I can also read the data messages that are present
+    // on the DataStore at the time this is called, recording
+    // it as long as it was broadcasted by someone other that
+    // myself. Returns the number of messages read.
+  int readMessages();
+
+private:
+    // add any private functionality and members you want
+};
+</pre>
 
 <p>
+  You're to employ policy-based class design techniques in creating
+  this class to handle a majority of the functionality. There are
+  three policies specific to our Application
+  class. A <strong>Protocol</strong> policy, which determines how
+  to format <em>messages</em> written to the <code>DataStore</code>
+  as well as how to read <em>messages</em> read from the
+  <code>DataStore</code>. An <strong>Encoding</strong> policy,
+  which encodes and decodes data written to and read from the
+  <code>DataStore</code>. Finally, a <strong>Storage</strong>
+  policy, which takes care of managing the data for each
+  application.
+</p>
+
+<h4>Protocol</h4>
+
+<p>
+  The Protocol policy needs to take care of preparing messages
+  for writing to the DataStore and extracting information from
+  messages read from the DataStore. So before an <code>Application</code>
+  writes something to the DataStore, it asks the <code>Protocol</code>
+  for format the message. Similarly, when an <code>Application</code>
+  reads from the DataStore, it passes the raw data to the <code>
+  Protocol</code> and asks for either the address if it's connecting
+  and data if its reading messages. The only Protocol policy we'll
+  write is called SimpleProtocol and supports the following
+  functionality:
+</p>
+
+<pre>
+template< /*stuff here*/ >
+class SimpleProtocol : /*stuff here*/ {
+public:
+    // WRITE - when the Application is going to write,
+    // I have to add the appropriate header so that
+    // I can read the information later. Returns the
+    // message ready for sending on the DataStore
+  string prepareHeartbeat(string addr) const;
+  string prepareData(string data, string addr) const;
+
+    // READ - given some raw data, I need to be able to
+    // pull out the address of a heartbeat or data of a
+    // data message. Returns true if there is an address/data
+    // left in the rawdata, setting startIdx to the character
+    // after the last character processed, addr to the sender
+    // of the data or heartbeat, and data to the data in the
+    // message.
+  bool getNextConnection(int& startIdx, const string& rawData, string& addr) const;
+  bool getNextData(int& startIdx, const string& rawData, string& data, string& addr) const;
+
+private:
+    // we need a series of types of headers that the Protocol
+    // can use to tell what information is present in a string
+    // raw data: a series of characters
+  enum MsgType { HEARTBEAT, DATA, KEY };
+};
+</pre>
+
+<p>
+  Let's say an application (address "BOE") does a heartbeat and writes
+  the following data (strings) to DataStore: "kylie", "kim", "khloe".
+  If the header string is "HTBT" for a heartbeat message and "DATA" for
+  a data message, DataStore may look something like this: 
+  <pre>
+  "HTBTBOEDATABOEkylieDATABOEkimDATABOEkhloe"
+  </pre>
+
+  Then, if another application (address "MOO") does a heartbeat,
+  DataStore will look like this:
+  <pre>
+  "HTBTBOEDATABOEkylieDATABOEkimDATABOEkhloeHTBTMOO"
+  </pre>
+
+  One Application call to <code>getNextConnection(idx, rawdata, addr)</code>
+  with idx initialized to 0 will return
+  true, set idx to 7 and addr to "BOE". Another call will the same arguments
+  will return true, set idx to rawdata.size() and addr to "MOO".
+
+  Meanwhile, one Application call to
+  <code>getNextData(idx, rawdata, data, addr)</code> with
+  idx initialized to 0 will return true, set idx to 16, addr to BOE, data to
+  "kylie". It returns true two more times (setting idx, data, and address
+  accordingly) and then returns false.
+</p>
+
+<p>
+  With that being said, there are multiple ways to implement the <code>
+  Protocol</code>. It is up to your discretion as to exactly what the
+  message format is.
+</p>
+
+<h4>Encoding</h4>
+
+<p>
+  The above description of the <code>Protocol</code> does no encoding
+  of messages, anyone anywhere with access to the <code>DataStore</code>
+  can read the messages. We'd like some kind of capability to add protection
+  here. To do so, the Application can also specify some Encoding Policy
+  that the Protocol will use to encode the data before sending and decode
+  data that is read. We'll write a HuffmanEncoder that supports the
+  following functionality:
+</p>
+
+<pre>
+class HuffmanEncoder {
+public:
+    // take some data to be sent, perform Huffman Encoding,
+    // and return a string of bits representing the encoding.
+    // We also need the tree resulting from the encoding
+    // process so that Applications receiving the data can
+    // decode. This function must allocate memory for the
+    // tree and copy the tree into this character array so
+    // that it can be shared and other HuffmanEncoders can
+    // decode given some data and a tree.
+  string encode(string data, char* tree) const;
+
+    // takes in some encoded data in the form of bits and
+    // a pointer to a tree in the form of a character
+    // array. It uses the tree to decode the bitstring
+    // and returns the resulting string.
+  string decode(string bitstring, char* tree) const;
+};
+</pre>
+
+<p>
+  A potentially convulted part of developing this encoder is how
+  the tree is going to be communicated between Applications. Keep
+  in mind the following fact from the C++ standard:<br><br>
+
+  <em>For any object (other than a base-class subobject) of trivially copyable type T,
+  whether or not the object holds a valid value of type T, the underlying bytes
+  making up the object can be copied into an array of char, unsigned char, or std::byte.
+  If the content of that array is copied back into the object, the object shall
+  subsequently hold its original value.</em>
+
+  As always, be wary of leaking memory.
+</p>
+
+<h4>Storage</h4>
+
+<p>
+  Finally, your Application needs to have a Storage policy. It stores the
+  type of data that your Application manages and gives the application a
+  way to access that data. Our Storage (unsurprisingly rather simple)
+  implements the following functionality:
+</p>
+
+<pre>
+template<class DataType>
+class SimpleStorage {
+public:
+    // have the Storage policy remember some piece of data,
+    // returns the index of the stored data, or -1 if storing
+    // was unsuccessful
+  int      store(DataType data);
+
+    // return the amount of data stored
+  int      size() const;
+
+    // get a piece of data by index
+  DataType get(int idx) const;
+
+private:
+  // anything you need
+};
+</pre>
+
+<p>
+  There are many ways for an Application to remember where something
+  is stored. Here, we'll just use integer indices. We can conveniently
+  access all stored data by looping over the indices from 0 to size()-1.
+</p>
+
+<p><em>
   In this scenario, we have the application managing it's own connections,
   which in practice we're unlikely to do. It'd be better - it would generalize
   the class structure even better, if we were to provide a ConnectionManager
   policy that takes care of setting up connections over the DataStore,
   storing connections that it has, and connecting with other Applications.
   But we won't go into that in this lab, you've done enough.
+</em></p>
+
+<h3>Your final task</h3>
+
+<p>
+  Now that you have a working, extensible Application class, let's write
+  a real life application that uses it. You're going to implement a simple
+  Airport application. When this airport is constructed, you need to pass
+  in a vector of airport routes that the Airport stores. A route is a series
+  of airport codes (all length 3) such as "LAXDENDTWSANJFK". Airports can
+  <code>alertAirports()</code>, which posts their data, including their
+  own address to the DataStore. They can also <code>gatherData()</code>,
+  in which they read all routes on the DataStore and add it to their
+  collection of routes.
+</p>
+
+<p>
+  Probably something more interesting you can do with the Airports class.
+  To be continued...
+</p>
+
+<h3>Resources</h3>
+
+<p>
+  Andrei Alexandrescu, <a href="http://erdani.com/index.php/books/modern-c-design/">Modern
+  C++ Design: Generic Programming and Design Patterns Applied</a>, Addison-Wesley
+  (2001) Chapter 1.<br>
+
+  David Abrahams & Aleksey Gurtovoy, <a href="https://www.amazon.com/
+  Template-Metaprogramming-Concepts-Techniques-Beyond/dp/0321227255">C++ Template
+  Metaprogramming: Concepts, Tools, and Techniques</a>Addison-Wesley (2003).<br>
+
+  Templates and generic programming within <a href="https://github.com/isocpp/
+  CppCoreGuidelines/blob/master/CppCoreGuidelines.md#S-templates">CppCoreGuidelines</a>
+  by Bjarne Stroustrup and Herb Sutter.<br>
 </p>
