--- a/coding/spec.html
+++ b/coding/spec.html
@@ -351,7 +351,9 @@ public:
   If the content of that array is copied back into the object, the object shall
   subsequently hold its original value.</em>
 
-  As always, be wary of leaking memory.
+  As always, be wary of leaking memory. You may find it helpful to first write
+  a SimpleEncoder class that does not encoding (just returns the passed in string),
+  up to you.
 </p>
 
 <h4>Storage</h4>
