more and more helpful comments

--- a/pointers/spec.html
+++ b/pointers/spec.html
@@ -172,7 +172,11 @@ private:
 </p>
 
 <p>
-  <strong>Important</strong>: well, I can't remember just laundry things.
+  <strong>Important</strong>: Running <code>make main; ./main</code> should
+  print <code>"Passed all tests!"</code> and running <code>make mem-test</code>
+  should report 0 memory leaks. Before moving on to the next part, you
+  should be absolutely sure no memory is leaked, includig writing your
+  own tests if you have to.
 </p>
 
 <h3>Part 2 Simple Road Simulator</h3>
